--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
       <li class="mobile-menu__item">
         <a
           class="link mobile-menu__link mobile-menu__link--current"
-          href="#"
+          href="./index.html"
           >Студия</a
         >
       </li>
