--- a/portfolio.html
+++ b/portfolio.html
@@ -693,7 +693,7 @@
       <li class="mobile-menu__item">
         <a
           class="link mobile-menu__link "
-          href="#"
+          href="./index.html"
           >Студия</a
         >
       </li>
